# coding-agent-eval

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
agent/: __init__.py  __main__.py  config.py  evoclaw_cli.py  llm.py  loop.py
docs/: README.md  README.zh-CN.md  architecture.md  architecture.zh-CN.md  evaluation.md  evaluation.zh-CN.md  observability.md  observability.zh-CN.md  provenance.md  provenance.zh-CN.md  reproducibility.md  reproducibility.zh-CN.md
eval/: __init__.py  judge.py  run_eval.py
obs/: __init__.py  otel.py  trace.py  viewer.py
scripts/: analyze_sm_compact_traces.py  check_junit_skips.py  compact_smoke.py  eval_day4_smoke.py  eval_smoke.py  judge_check.py  loop_compact_smoke.py  loop_trace_test.py  otel_check.py  phoenix_smoke.py  probe_window.py  regression_gate.py  release_gate.py  run_sm_long_session_probe.py  run_sm_takeover_pilot.py  run_task.py  start_phoenix.py  trace_demo.py  validate_tasks.py  view_trace.py
tests/: conftest.py  test_ace_settings.py  test_agent_tool.py  test_attachments.py  test_auto_dream.py  test_auto_memory.py  test_auto_memory_cross_module_contract.py  test_background_tasks.py  test_ci_junit_skips.py  test_cli_packaging.py  test_command_classification.py  test_compact_core.py  test_compact_pipeline.py  test_config.py  test_context_budget.py  test_context_eval.py  test_core_tool_imports.py  test_core_tools_contract.py  test_deferred_tools.py  test_docker_executor.py  (+77 more)
(+248 files in other folders)
